* New url for users own dashboards at /user-dashboards
* Watchdog timer now periodically checks an API endpoint itself and checks if a user is logged in
* Auto-login functionality, credentials are stored in local storage
* mdAdmin interface notifies user about connectivity to Mango API via watchdog functionality
* Documentation of Mango Dashboards AngularJS directives, services and filters

*Version 3.1.1*
* Fix admin template menu in Firefox

*Version 3.1.0*
* Point lists and point queries are queried using an object now, you can still pass a string by enclosing in single quotes
* Add a separate sort, start and limit attributes to point lists and point queries
* Add a CSS injection service and improve CSS injection from app and directives
* Return total, start, limit, page and pages as properties of point arrays to enable pagination
* Add material design data point table example
* Convert statistics tables directives to use material design tables
* Load translations up-front in mdAdmin so they can be used by translation filter
* Disable angular debug info in mdAdmin app and add option to bootstrap
* Update documentation and add more comments to example code
* Add single page app template with login page
* Add some layout examples

*Version 3.0.1*
* Update demo virtual data sources JSON file
* Slight tweak of color scheme
* Updates to examples
* Add JavaScript Math library to root scope of maDashboards app
* Add timeout attribute to ma-point-values and ma-point-statistics directives
* Improve boostrap.js to allow more configuration for bootstrapping app
* Add a templates section to the menu and add more template examples
* Add page explaining how to create a dashboard in overrides
* Add a bare bones angular material admin template
* Add ma-point-hierarchy directive and examples
* Include md-data-table in maMaterialDashboards

*Version 3.0.0*
* Complete rebuild of the module to use AngularJS and Material Design Template