@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body layout="column">
+<body layout="column" ng-class="{'api-down': !mangoWatchdog.apiUp, 'logged-out': !mangoWatchdog.loggedIn}">
 	<div ng-if="appLoading" class="app-loading">
 		<i class="fa fa-cog fa-spin"></i>
 	</div>
