@@ -529,6 +529,8 @@ table.variables-matrix {
   color: white;
 }
 
+/* Input hints */
+
 md-input-container .hint {
   position: absolute;
   left: 2px;
@@ -539,8 +541,35 @@ md-input-container .hint {
   color: grey;
 }
 
+/* Centered toast for watchdog notifications */
+
 .md-top.md-center,
 .md-bottom.md-center {
   left: 50%;
   transform: translate3d(-50%, 0, 0);
+}
+
+/* API down / not logged in styles for live displays */
+
+.logged-out .live-value {
+    opacity: 0.5;
+    position: relative;
+}
+
+.logged-out .live-value:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-image: 
+    	linear-gradient(45deg, transparent 40%, rgba(255, 0, 0, 0.5) 50%, transparent 60%, transparent 100%),
+    	linear-gradient(-45deg, transparent 40%, rgba(255, 0, 0, 0.5) 50%, transparent 60%, transparent 100%);
+  	background-size: 16px 16px;
+  	background-position: 8px 8px;
+}
+
+.logged-out img.live-value {
+	background-color: rgba(255, 0, 0, 0.2);
 }
